2016-01-29  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR1983: Support using the system installation
	of NSS with the SunEC provider
	* Makefile.am:
	(check-ecc): Argument passed to the test should
	now be "yes".

2016-01-29  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR2804: test/tapset/jstaptest.pl should be executable
	* Makefile.am:
	(check-tapset-jstack): Actually replace BUILD_OUTPUT_DIR
	as mentioned in previous commit.
	* test/tapset/jstaptest.pl: Fix capitalisation of
	"IcedTea".

2016-01-29  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR2825: Placement of -lfreebl matters when
	using bfd linker
	* NEWS: Updated.
	* acinclude.m4:
	(IT_ENABLE_SUNEC): Move -lfreebl to start of
	SUNEC_LIBS.

2016-01-29  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR2804: test/tapset/jstaptest.pl should be executable
	* Makefile.am:
	(check-tapset-probes): Check that Perl is available
	and, if, so use it to invoke the script. Replace
	BUILD_OUTPUT_DIR with the OpenJDK 8 equivalent,
	BUILD_IMAGE_DIR.
	(check-tapset-jstack): Likewise.
	* NEWS: Updated.
	* configure.ac:
	Check for Perl if SystemTap is found, so the
	tests can be run if required.

2016-01-29  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR1983: Support using the system installation
	of NSS with the SunEC provider
	* INSTALL: Fix header from 'IcedTea7' to 'IcedTea'.
	* Makefile.am:
	(ICEDTEA_PATCHES): Make disable-intree-ec patch
	conditional on whether or not the SunEC provider
	is enabled. Add new variants of the NSS/PKCS11
	configuration patch for cases where it is not applied.
	(ICEDTEA_CONFIGURE): Pass --enable-system-nss or
	--disable-system-nss, depending on whether or
	not the SunEC provider is enabled.
	(ICEDTEA_ENV): Remove DISABLE_INTREE_EC which
	is not applicable in OpenJDK 8.
	* README: Fix header from 'IcedTea7' to 'IcedTea'.
	* patches/nss-config-with-sunec.patch,
	* patches/nss-not-enabled-config-with-sunec.patch: